[project]
name = "examplebasedcoding"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tomohiro", email = "t.nishiyama.wm@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "rapidfuzz>=3.9.4",
    "tqdm>=4.66.4",
    "openpyxl>=3.1.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/examplebasedcoding"]
